crates/runtime/tests/ui/enum_not_supported.rs
use clap_layers::Layered;

#[derive(Layered)]
enum Config {
    A,
    B,
}

fn main() {}
